cluster/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: longhorn-ui
  namespace: longhorn-system
  annotations:
    kubernetes.io/ingress.class: traefik-internal
    traefik.ingress.kubernetes.io/service.serverssheme: http
spec:
  ingressClassName: traefik-internal
  rules:
    - host: longhorn.local.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
